# sam3-app

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  turbo.json
apps/api-inference/: .env.example  Dockerfile  README.md  example_sam.py  package.json  pyproject.toml
apps/api-inference/src/app/: config.py  main.py
apps/api-inference/src/app/helpers/: logger.py  response_api.py
apps/api-inference/src/app/integrations/sam3/: inference.py  mask_utils.py  visualizer.py
apps/api-inference/src/app/routers/: sam3.py
apps/api-inference/src/app/schemas/: sam3.py
apps/web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.base.json  tsconfig.json
apps/web/src/: index.css
apps/web/src/components/: AutoAnnotateModal.tsx  BboxPromptPanel.tsx  Canvas.tsx  Sidebar.tsx  (+4 more)
docker/: README.md  docker-compose.dev.yml  docker-compose.solo.yml  docker-compose.team.yml
docs/: COLOR_THEME_GUIDE.md  README.md  getting-started.md
frontend/: README.md  index.html  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AutoAnnotateModal.tsx  BboxPromptPanel.tsx  Canvas.tsx  ExportModal.tsx  GroupedLabelSelector.tsx  LeftSidebar.tsx  Sidebar.tsx  TextPromptPanel.tsx
frontend/src/hooks/: useKeyboardShortcuts.ts  useStorage.ts
frontend/src/lib/: coco-export.ts  navigation.ts  sam3-client.ts  storage.ts  yolo-export.ts
frontend/src/pages/: AnnotationApp.tsx  LandingPage.tsx
frontend/src/types/: annotations.ts
tools/: README.md
(+36 files in other folders)
