[project]
name = "sam3-app"
version = "0.1.0"
description = "SAM3 Segment Anything Model 3 API with FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # FastAPI core
    "fastapi>=0.115.4",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.32.0",

    # SAM3 dependencies (minimal)
    "huggingface-hub>=1.1.4",
    "torch>=2.9.1",
    "torchvision>=0.24.1",

    # Image processing
    "pillow>=12.0.0",
    "matplotlib>=3.10.7",
    "opencv-python-headless==4.12.0.88"
]

[dependency-groups]
dev = [
    "ruff>=0.9.4",
    "ipython>=8.31.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
